2009-06-27  Kai Tietz  <kai.tietz@onevision.com>

	* gdtoa/strtof.c (__strtof): Pre initialize local variable u to
	avoid warning.

2009-06-26  Kai Tietz  <kai.tietz@onevision.com>

	* crt/tlssup.c (__mingw_TLScallback): Use for TLS cleanup.
	* libsrc/mingwthrd_mt.c: Make it a dummy library file.
	* libsrc/dummy_mingwthrd.c: Add TLS clean functions.
	* libsrc/mingwthrd_nomt.c (_CRT_MT): For default set constant
	to value 2.
	Add win32 thread specific call methods.

2009-06-19  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crt0_c.c: Allow use of main/wmain as -mwindows entry point
	and pass proper Arguments.
	* crt/crt0_w.c: Likewise.
	* crt/crtexe.c: Use for -mwindows case also main/wmain with proper
	arguments.

2009-05-15  Kai Tietz  <kai.tietz@onevision.com>

	* threads/: Add sources for EH cleanup DLL.
	* libsrc/dummy_mingwthrd.c: Likewise.

2009-05-11  Ozkan Sezer  <sezeroz@gmail.com>

	* crt/wildcard.c: documented the _dowildcard variable.
	* crt/crtexe.c (__tmainCRTStartup): added the missing '*' spotted by
	Ivan Maidanski.
	* crt/CRT_glob.c: New. Used to create CRT_glob.o, a helper object to
	turn on command line wildcard expansion.
	* Makefile.am: Added CRT_glob.o.
	* Makefile.in, config.h.in, configure: regenerated.

2009-04-20  Ozkan Sezer  <sezeroz@gmail.com>

	FR/2619978:
	* mingw-w64-crt/gdtoa/strtof.c, mingw-w64-crt/gdtoa/strtopx.c:  Prepend
	the strtof and strtold symbols with '__mingw_' to provide both of strtof
	and strtold which rely on msvcrt, and __mingw_strtof and __mingw_strtold
	which rely on the internal gdtoa library.
	* mingw-w64-headers/include/stdlib.h:  Properly provide the prototypes
	for __mingw_strtof and __mingw_strtold.

2009-04-20  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/misc.c: Sync'ed with the netlib.org sources from April 20, 2009.
	The author's changelog states: "do not attempt to allocate large memory
	blocks from the private memory pool (which was an unlikely event, but a
	bug)."