@@ -1,0 +1,12 @@
+;
+; Definition file of Normaliz.dll
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "Normaliz.dll"
+EXPORTS
+IdnToAscii@20
+IdnToNameprepUnicode@20
+IdnToUnicode@20
+IsNormalizedString@12
+NormalizeString@20
