@@ -1,0 +1,12 @@
+;
+; Definition file of Normaliz.dll
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "Normaliz.dll"
+EXPORTS
+IdnToAscii
+IdnToNameprepUnicode
+IdnToUnicode
+IsNormalizedString
+NormalizeString
